<resources>
    <string name="app_name">PinInterface</string>
    <string name="target_pin">Einzugebener PIN:</string>
    <string name="start">Start</string>
    <string name="user_study">Benutzerstudie</string>

    <string name="interface_types_standard">Android Interface</string>
    <string name="interface_types_column">Column Interface</string>
    <string name="interface_types_standard_vis_aid">Android Interface with Visual Aid</string>
    <string name="interface_types_column_vis_aid">Column Interface with Visual Aid</string>
    <string name="interface_types_none">No Interface Selected</string>


    <string name="demographics">Demographics</string>
    <string name="gender">Geschlecht</string>
    <string name="gender_female">Weiblich</string>
    <string name="gender_male">Männlich</string>
    <string name="gender_unknown">Divers</string>
    <string name="continue_button">Weiter</string>
    <string name="age">Alter</string>
    <string name="hint_age">Hier das Alter eingeben</string>
    <string name="righthanded">Rechts</string>
    <string name="lefthanded">Links</string>
    <string name="ambidextrous">Beidhändig</string>
    <string name="dominant_hand">Dominante Hand</string>
    <string name="age_not_set">Kein Alter gesetzt</string>
    <string name="gender_not_set">Kein Geschlecht ausgewählt</string>
    <string name="dominant_hand_not_set">Dominante Hand nicht ausgewählt</string>

    <string name="wrong_pin">FALSCH</string>
    <string name="error_pin_not_found_01">ERROR 01 - PIN nicht gefunden</string>
    <string name="error_pin_submission_string">Error 02</string>

    <string name="baseline_backspace">\u232B</string>
    <string name="baseline_keyboard_tab">\u21E5</string>
    <string name="emergency">Notruf</string>


    <string name="layout_standard">Standard Layout</string>
    <string name="layout_standard_with_visAid">Standard Layout mit visueller Hilfe</string>
    <string name="layout_column">Spalten Layout</string>
    <string name="layout_column_with_visAid">Spalten Layout mit visueller Hilfe</string>

    <string name="sus_00">Ich kann mir sehr gut vorstellen, dieses Layout regelmäßig zu nutzen.</string>
    <string name="sus_01">Ich empfinde dieses Layout als unnötig komplex.</string>
    <string name="sus_02">Ich empfinde dieses Layout als einfach zu nutzen</string>
    <string name="sus_03">Ich denke, dass ich technischen Support brauchen würde, um dieses Layout zu nutzen.</string>
    <string name="sus_04">Ich finde, dass die verschiedenen Funktionen dieses Layouts gut integriert sind.</string>
    <string name="sus_05">Ich finde, dass es im Layout zu viele Inkonsistenzen gibt.</string>
    <string name="sus_06">Ich kann mir vorstellen, dass die meisten Leute dieses Layout schnell zu beherrschen lernen.</string>
    <string name="sus_07">Ich empfinde die Bedienung als sehr umständlich.</string>
    <string name="sus_08">Ich habe mich bei der Nutzung dieses Layouts sehr sicher gefühlt.</string>
    <string name="sus_09">Ich musste eine Menge Dinge lernen, bevor ich mit diesem Layout arbeiten konnte.</string>
    <string name="system_usability_scale">Bewerte die Benutzeroberflächen</string>
    <string name="back">zurück</string>
    <string name="next">nächste</string>
    <string name="page">Seite</string>
    <string name="feedback">Feedback</string>
    <string name="hint_feedback_anyonym">Um Ihre Anonymität zu wahren, bitte keine Namen oder sonstige identifizierbarende Merkmale nennen.</string>
    <string name="feedback_edit_text">Feedback…</string>
    <string name="not_all_fields_filled">Bitte alle Felder ausfüllen</string>
    <string name="no_gender_selected">kein Geschlecht angegeben</string>
    <string name="invalid_age_selected">ungültiges Alter angegeben</string>
    <string name="no_dominant_hand_selected">Dominante Hand nicht angegeben</string>
    <string name="next_interface">"Nächstes Interface: "</string>
    <string name="all_pin_interfaces_solved">Alle Pin Interfaces gelöst!</string>
    <string name="message_take_of_gloves">Bitte die Handschuhe nun ausziehen.</string>
    <string name="message_put_on_gloves">Bitte die Handschuhe nun anziehen.</string>
    <string name="app_description">Löse Pins in unterschiedlichen Interfaces.\nBeantworte Fragen zu deiner Person.\nBeantworte Fragen.\nGib Feedback.\nZeichne deine Interface Idee.</string>
    <string name="thesis_name">\"Usability study of mobile authentication for elderly users with rheumatoid arthritis\"</string>
    <string name="finish">Beenden</string>
    <string name="settings">Einstellungen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_id">"PhoneID: %s"</string>
    <string name="apply">OK</string>
    <string name="pw">passwort</string>
    <string name="reset_db">reset DB</string>
    <string name="click_to_show">\" (klick zum anzeigen)</string>
    <string name="export_db">export DB</string>
    <string name="text_hand_used">Wie wurde das Handy gehalten?</string>
    <string name="hand_used_normaly">Wie nutzt du normalerweise das Handy</string>
    <string name="end">Vielen Dank!</string>
    <string name="end_description">Der Smartphone-Teil der Studie ist nun beendet.</string>
    <string name="hand_used_normaly_not_selected">\'Wie nutzt du normalerweise das Handy\' nicht angegeben</string>
    <string name="hand_used_not_selected">\'Wie wurde das Handy gehalten\' nicht angegeben</string>
    <string name="sus_score_explanation">1 = stimme stark nicht zu\n 5 = stimme stark zu</string>


</resources>